# DynamicSystemsRos

./: .gitignore
core_logic_cpp/: CMakeLists.txt  main.py  package.xml
core_logic_cpp/include/: Animation.hpp  App.hpp  Button.hpp  ChebFunc.hpp  EventManager.hpp  GameMode.hpp  GraphicsManager.hpp  MainMenuMode.hpp  Mode.hpp  PID.hpp  PersistentState.hpp  Rect.hpp  SDL_Management.hpp  Settings.hpp  Slider.hpp  System.hpp  Texture.hpp  ValueManager.hpp  Vector2D.hpp
core_logic_cpp/modules/: module_uno.cpp
core_logic_cpp/scripts/: Oscilloscope.py  Plots.py
core_logic_cpp/src/: Animation.cpp  App.cpp  Button.cpp  ChebFunc.cpp  EventManager.cpp  GameMode.cpp  GraphicsManager.cpp  MainMenuMode.cpp  PID.cpp  PersistentState.cpp  SDL_Management.cpp  Slider.cpp  System.cpp  ValueManager.cpp
nodes_python/: package.xml  setup.cfg  setup.py
nodes_python/nodes_python/: ControlPanel_script.py  PID_script.py  SetpointProvider_script.py  System_script.py
system_interfaces/: CMakeLists.txt  package.xml
system_interfaces/msg/: PID_out.mg  PID_params.msg  PidOut.msg  PidParams.msg  SetpointProviderOut.msg  SetpointProvider_out.msg  SystemOut.msg  SystemParams.msg  System_out.msg
system_interfaces/srv/: SystemParams.srv
